[package]
name = "envflag"
license = "MIT"
version = "0.1.6"
edition = "2024"
rust-version = "1.93"
categories = ["config", "os", "parser-implementations"]
description = "A strict, zero-boilerplate env manager with dotenvy support and validation."
keywords = ["env", "filter", "config", "parser", "12-factor"]
readme = "README.md"
repository = "https://github.com/canmi21/envflag.git"

[package.metadata.docs.rs]
all-features = true

[dependencies]
dotenvy = "0.15"
thiserror = "2.0"
tracing = { version = "0.1", optional = true }
fancy-regex = { version = "0.17", optional = true }
url = { version = "2", optional = true }

[features]
default = []
full = ["tracing", "regex", "url"]
tracing = ["dep:tracing"]
regex = ["dep:fancy-regex"]
url = ["dep:url"]

[[example]]
name = "basic"

[[example]]
name = "validation"

[[example]]
name = "prefixes"

[[example]]
name = "custom_init"

[dev-dependencies]
temp-env = "0.3"
serial_test = "3.3"

[lints.rust]
unsafe_code = "forbid"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[lints.clippy]
type_complexity = "allow"
await_holding_lock = "warn"
dbg_macro = "warn"
empty_enums = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
exit = "warn"
filter_map_next = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
must_use_candidate = "warn"
needless_borrow = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
option_option = "warn"
redundant_clone = "warn"
ref_option = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_self_not_must_use = "warn"
single_match_else = "warn"
str_to_string = "warn"
suboptimal_flops = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
use_self = "warn"
verbose_file_reads = "warn"